--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     </head>
 
     <body>
+        <div class="header-container">
+            <div class="logo">Your Mom</div>
+            <div class="navigation">
+                <ul>
+                    <a href="#">Mama mo</a>
+                    <a href="#">Mama ko</a>
+                    <a href="#">Mama naten</a>
+                </ul>
+            </div>
+        </div>
+
+        <div class="content-container">
+
+        </div>
 
     </body>
 
