add div and containers for index.html

--- a/index.html
+++ b/index.html
@@ -20,6 +20,22 @@
         </div>
 
         <div class="content-container">
+            
+            <div class="1st-container">
+
+            </div>
+
+            <div class="2nd-container">
+
+            </div>
+
+            <div class="3rd-container">
+
+            </div>
+
+            <div class="4th-container">
+
+            </div>
 
         </div>
 
