rename container classes to use letter instead of numbers

--- a/index.html
+++ b/index.html
@@ -20,20 +20,26 @@
         </div>
 
         <div class="content-container">
-            
-            <div class="1st-container">
+
+            <div class="first-container">
+                <div class="first-left">
+
+                </div>
+
+                <div class="first-right">
+                    <img href="https://cdn.discordapp.com/attachments/736985525923086389/1155372918407168050/yourmom.png">
+                </div>
+            </div>
+
+            <div class="second-container">
 
             </div>
 
-            <div class="2nd-container">
+            <div class="third-container">
 
             </div>
 
-            <div class="3rd-container">
-
-            </div>
-
-            <div class="4th-container">
+            <div class="fourth-container">
 
             </div>
 
