add first container with css styling

--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
 
             <div class="first-container">
                 <div class="first-left">
-
+                    <div class="first-title">Manifest Destiny. Experience Freedom.</div>
+                    <div class="first-text">"Let us therefore animate and encourage each other, and show the whole world that a Freeman, contending for liberty on his own ground, is superior to any slavish mercenary on earth."</div>
+                    <button>Subscribe to Rosemi-sama's Youtube Channel</button>
                 </div>
 
                 <div class="first-right">
-                    <img href="https://cdn.discordapp.com/attachments/736985525923086389/1155372918407168050/yourmom.png">
+                    <img src="https://cdn.discordapp.com/attachments/736985525923086389/1155372918407168050/yourmom.png" alt="your mom" class="first-image">
                 </div>
             </div>
 
