add second container with css styling styled button

--- a/index.html
+++ b/index.html
@@ -34,7 +34,26 @@
             </div>
 
             <div class="second-container">
-
+                <div class="second-title">Meet Emu Otori</div>
+                <div class="second-text">"Hello!!! I'm Emu Otori. Emu is meaning SMILE!!!!!!!!!!!"</div>
+                <div class="second-content">
+                    <div class="second-item">
+                    <img src="https://cdn.discordapp.com/attachments/480923548140044310/1155395031570599986/Emu_06_st.ayaka.one.png" alt="Emu-1">
+                    <div>For a better Philippines!</div>
+                    </div>
+                    <div class="second-item">
+                    <img src="https://cdn.discordapp.com/attachments/480923548140044310/1155395031801278494/Emu_07_st.ayaka.one.png" alt="Emu-2">
+                    <div>Life is over...</div>
+                    </div>
+                    <div class="second-item">
+                    <img src="https://cdn.discordapp.com/attachments/480923548140044310/1155395032061321237/Emu_13_st.ayaka.one.png" alt="Emu-3">
+                    <div>We live in a society</div>
+                    </div>
+                    <div class="second-item">
+                    <img src="https://cdn.discordapp.com/attachments/480923548140044310/1155395032283631677/Emu_16_st.ayaka.one.png" alt="Emu-4">
+                    <div>Barrack Obama</div>
+                    </div>
+                </div>
             </div>
 
             <div class="third-container">
