add third container with css styling

--- a/index.html
+++ b/index.html
@@ -57,7 +57,12 @@
             </div>
 
             <div class="third-container">
-
+                <div class="third-quote">
+                    "TANGINA MO, JHEPOY DIZON! ANG PANGIT NG PAGMUMUKHA MO, KITA MO NA BANG MUKHA MO SA SALAMIN? TANGINA MO! ANG PANGIT MO, HA? Tangina mo!"
+                </div>
+                <div class="third-quotation">
+                    - Source: Trust Me
+                </div>
             </div>
 
             <div class="fourth-container">
