add fourth container fix container flex padding and alignment

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="first-left">
                     <div class="first-title">Manifest Destiny. Experience Freedom.</div>
                     <div class="first-text">"Let us therefore animate and encourage each other, and show the whole world that a Freeman, contending for liberty on his own ground, is superior to any slavish mercenary on earth."</div>
-                    <button>Subscribe to Rosemi-sama's Youtube Channel</button>
+                    <button href="#">Subscribe to Rosemi-sama's Youtube Channel</button>
                 </div>
 
                 <div class="first-right">
@@ -38,19 +38,19 @@
                 <div class="second-text">"Hello!!! I'm Emu Otori. Emu is meaning SMILE!!!!!!!!!!!"</div>
                 <div class="second-content">
                     <div class="second-item">
-                    <img src="https://cdn.discordapp.com/attachments/480923548140044310/1155395031570599986/Emu_06_st.ayaka.one.png" alt="Emu-1">
+                    <img src="https://cdn.discordapp.com/attachments/480923548140044310/1155395031570599986/Emu_06_st.ayaka.one.png" alt="Emu-1" class="second-image">
                     <div>For a better Philippines!</div>
                     </div>
                     <div class="second-item">
-                    <img src="https://cdn.discordapp.com/attachments/480923548140044310/1155395031801278494/Emu_07_st.ayaka.one.png" alt="Emu-2">
+                    <img src="https://cdn.discordapp.com/attachments/480923548140044310/1155395031801278494/Emu_07_st.ayaka.one.png" alt="Emu-2" class="second-image">
                     <div>Life is over...</div>
                     </div>
                     <div class="second-item">
-                    <img src="https://cdn.discordapp.com/attachments/480923548140044310/1155395032061321237/Emu_13_st.ayaka.one.png" alt="Emu-3">
+                    <img src="https://cdn.discordapp.com/attachments/480923548140044310/1155395032061321237/Emu_13_st.ayaka.one.png" alt="Emu-3" class="second-image">
                     <div>We live in a society</div>
                     </div>
                     <div class="second-item">
-                    <img src="https://cdn.discordapp.com/attachments/480923548140044310/1155395032283631677/Emu_16_st.ayaka.one.png" alt="Emu-4">
+                    <img src="https://cdn.discordapp.com/attachments/480923548140044310/1155395032283631677/Emu_16_st.ayaka.one.png" alt="Emu-4" class="second-image">
                     <div>Barrack Obama</div>
                     </div>
                 </div>
@@ -67,6 +67,22 @@
 
             <div class="fourth-container">
 
+                <div class="fourth-form-padding">
+
+                    <div class="fourth-form">
+
+                    <div class="fourth-left">
+                        <div class="fourth-title">Need Help? Don't hesitate to contact us</div>
+                        <div class="fourth-text"></div>If you ever needed help for anything. You've come to the right place. With a press of a button you will be connected with our live chat support that can help you with any non-sexual inquiry.</div>
+                    </div>
+
+                    <div class="fourth-right">
+                        <button href="#" class="fourth-button">ChatGPT</button>
+                    </div>
+
+                </div>
+
+                </div>
             </div>
 
         </div>
